# raif-vllm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: demo-vllm.tape
chat_templates/: raif_llama32.jinja
docs/: runpod_testing.md  vllm_e2e_results.md  vllm_tool_calling.md
examples/: demo_vllm.py  smoke_plugin.py
raif_vllm/: __init__.py  inject.py  plugin.py  reasoning.py  structured.py  templates.py  tool_parser.py
raif_vllm/chat_templates/: raif_qwen25.jinja  raif_qwen3.jinja
scripts/: make_chat_template.py  serve_smoke.sh
tests/: test_inject.py  test_plugin.py  test_reasoning.py  test_structured.py  test_tool_parser.py
