[project]
name = "raif-vllm"
version = "0.1.0"
description = "One vLLM plugin for transparent RAIF token savings — install it and existing OpenAI clients get RAIF on tools & response_format with no proxy and no client changes."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "truehazker", email = "40111175+truehazker@users.noreply.github.com" },
]
requires-python = ">=3.11"
keywords = ["raif", "vllm", "plugin", "llm", "structured-output", "tool-call", "response-format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# vLLM itself is provided by the serving host (and pins CUDA/torch), so it is NOT
# a hard dependency — only the pure RAIF format lib is. Use the `vllm` extra to
# pull a compatible engine for local experiments.
dependencies = ["raif-format>=0.5"]

[project.optional-dependencies]
# v0.19.x is the last CUDA-12 vLLM and carries every hook this plugin needs
# (reasoning-parser content decode + the render_chat inject seam). See the
# project's vLLM version-pin note.
vllm = ["vllm>=0.19,<0.20"]

[project.entry-points."vllm.general_plugins"]
raif = "raif_vllm.plugin:register"

[project.urls]
Repository = "https://github.com/skrrt-sh/raif-lora"
Homepage = "https://github.com/skrrt-sh/raif-lora"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["raif_vllm"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["raif_vllm"]
